Fixed resposive alignment and list of icons

--- a/style.css
+++ b/style.css
@@ -97,15 +97,7 @@
   font-size: 1.5em;
   font-weight: 700;
   margin-bottom: 25px;
-}
-
-#mainContentDiv #icons span {
-  width: 90%;
-}
-
-#mainContentDiv #icons i {
-  padding-top: 0.5rem;
-  width: 10%;
+  margin-top: 25px;
 }
 
 #mainContentDiv #undrawCodeThinking {
@@ -114,6 +106,27 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media screen and (max-width: 1200px) {
+  #mainContentDiv {
+    font-size: 16px;
+    padding-left: 65px;
+    padding-top: 65px;
+    padding-right: 35px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #mainContentDiv {
+    font-size: 12px;
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-right: 10px;
+  }
+  #mainContentDiv h1 {
+    margin-bottom: 10px;
+  }
 }
 
 #indexBody {
